--- a/client/package.json
+++ b/client/package.json
@@ -15,11 +15,20 @@
   "description": "",
   "dependencies": {
     "@apollo/client": "^3.10.5",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.20",
+    "@mui/material": "^5.15.20",
     "jwt-decode": "^4.0.0",
+    "mdb-react-ui-kit": "^8.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.4",
+    "react-bulma-components": "^4.1.0",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.14.1"
+    "react-google-recaptcha": "^3.1.0",
+    "react-router-dom": "^6.14.1",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.1",
