--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "serve": "cd client && npm run serve"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.15.21",
     "concurrently": "^8.2.2"
   },
   "devDependencies": {
