--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.21",
     "@mui/x-data-grid": "^7.9.0",
+    "autosuggest-highlight": "^3.3.4",
     "concurrently": "^8.2.2",
     "react-toastify": "^10.0.5"
   },
