--- a/client/package.json
+++ b/client/package.json
@@ -21,14 +21,17 @@
     "@mui/material": "^5.15.20",
     "@mui/x-data-grid": "^7.10.0",
     "autosuggest-highlight": "^3.3.4",
+    "bootstrap": "^5.3.3",
     "jwt-decode": "^4.0.0",
     "mdb-react-ui-kit": "^8.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
-    "react-bootstrap": "^2.10.4",
+    "react-avatar": "^5.0.3",
+    "react-bootstrap": "^2.10.5",
     "react-bulma-components": "^4.1.0",
     "react-dom": "^18.3.1",
     "react-google-recaptcha": "^3.1.0",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.14.1",
     "react-toastify": "^10.0.5"
   },
