--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "apollo-server": "^3.13.0",
     "apollo-server-caching": "^3.3.0",
     "apollo-server-express": "^3.13.0",
+    "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
