--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "serve": "cd client && npm run serve"
   },
   "dependencies": {
+    "@charkour/react-reactions": "^0.11.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.21",
