--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "@mui/x-data-grid": "^7.10.0",
     "autosuggest-highlight": "^3.3.4",
     "bootstrap": "^5.3.3",
+    "flowbite-react": "^0.10.2",
     "jwt-decode": "^4.0.0",
     "mdb-react-ui-kit": "^8.0.0",
     "prop-types": "^15.8.1",
@@ -41,6 +42,9 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.15",
     "vite": "^5.3.1"
   }
 }
