--- a/client/package.json
+++ b/client/package.json
@@ -38,7 +38,8 @@
     "react-loading-indicators": "^1.0.0",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.14.1",
-    "react-toastify": "^10.0.5"
+    "react-toastify": "^10.0.5",
+    "use-long-press": "^3.2.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.1",
